Minimal UAVCAN documentation to get started